--- a/package.json
+++ b/package.json
@@ -9,17 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.16.0",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "@heroicons/react": "^2.0.17",
+    "@portabletext/react": "^2.0.3",
+    "@sanity/icons": "^2.1.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.9.0",
+    "@sanity/ui": "^1.2.0",
+    "@sanity/vision": "^3.0.0",
+    "@types/node": "^18.16.0",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.39.0",
+    "eslint-config-next": "^13.3.1",
+    "next": "13.4.6",
+    "next-sanity": "^5.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-portable-text": "^0.6.0",
+    "sanity": "^3.0.0",
+    "sanity-plugin-iframe-pane": "^2.3.0",
+    "sharp": "^0.32.0",
+    "styled-components": "^5.2.0",
+    "tailwind-gradient-mask-image": "^1.0.0",
+    "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "@total-typescript/ts-reset": "^0.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.5",
+    "tailwind-scrollbar": "^3.0.0",
+    "tailwindcss": "^3.3.1"
   }
 }
