--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
+    "lozad": "^1.16.0",
     "next": "13.4.6",
     "next-sanity": "^5.0.2",
     "react": "^18.2.0",
@@ -36,10 +37,12 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.7",
     "@sanity/eslint-config-studio": "^2.0.1",
     "@total-typescript/ts-reset": "^0.4.2",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
+    "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
